--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -1,10 +1,11 @@
-@import './colors';
-@import './base';
-@import './utils';
-@import './theme';
-@import './components/dropdown';
-@import './components/card';
-@import './components/header';
-@import './components/orderList';
-@import './components/tradeList';
+@import "./colors";
+@import "./base";
+@import "./utils";
+@import "./theme";
+@import "./components/dropdown";
+@import "./components/card";
+@import "./components/header";
+@import "./components/orderList";
+@import "./components/tradeList";
+@import "./components/wallet";
 //@import './components/table';
